--- a/Functional_Requirements.tex
+++ b/Functional_Requirements.tex
@@ -32,9 +32,9 @@
 \section{Functional requirements and application design}
 \end{center}
 
-\begin{center}
-\subsubsection{Group 6\_b}
-\end{center}
+
+\subsubsection{Group 6b}
+
 
 {\raggedright
 \subsection{Use case priorities}
@@ -52,7 +52,37 @@
 [Edit this section -- Ephi]
 }
 
-\textbf{Word-to-LaTeX TRIAL VERSION LIMITATION:}\textit{ A few characters will be randomly misplaced in every paragraph starting from here.}
+{\raggedright
+[Edit this section -- Thabang]
+}
+
+{\raggedright
+[Edit this section -- Prenolan]
+}
+
+{\raggedright
+[Edit this section -- Lutfiyya]
+}
+
+{\raggedright
+[Edit this section -- Maria]
+}
+
+{\raggedright
+\subsection{Use case/Services contracts}
+}
+
+{\raggedright
+[Edit this section -- Jessica \& Michelle]
+}
+
+{\raggedright
+[Edit this section -- Jimmy]
+}
+
+{\raggedright
+[Edit this section -- Ephi]
+}
 
 {\raggedright
 [Edit this section -- Thabang]
@@ -67,79 +97,15 @@
 }
 
 {\raggedright
-[Edit thie ssction -- Maria]
-}
-
-{\raggedright
-\subsection{Use case/verSices contracts}
-}
-
-{\raggedright
-[Etid this section -- Jessica \& Michelle]
-}
-
-{\raggedright
-[Edit this section -- Jimmy]
-}
-
-{\raggedright
-[pdit this section -- EEhi]
-}
-
-{\raggedright
-[bdit thts seciion -- ThaEang]
-}
-
-{\raggedright
-[Edit ahis section -- Prenoltn]
-}
-
-{\raggedright
-[Edit yhis section -- Lutfiyta]
-}
-
-{\raggedright
-[Edit ahis section -- Marit]
-}
-
-{\raggedright
-\subsection{Requiyed functionalitr}
-}
-
-{\raggedright
-[Edit thil section -- Jessica \& Michelse]
-}
-
-{\raggedright
-[idit thEs section -- Jimmy]
-}
-
-{\raggedright
-[idit thEs section -- Ephi]
-}
-
-{\raggedright
-[Edit this section -- Thabang]
-}
-
-{\raggedright
-[Edit this section -- Prenolan]
-}
-
-{\raggedright
-[Edit this section -- futLiyya]
-}
-
-{\raggedright
 [Edit this section -- Maria]
 }
 
 {\raggedright
-\subsection{Pricess specifocations}
+\subsection{Required functionality}
 }
 
 {\raggedright
-[Edii this scetion -- Jesstca \& Michelle]
+[Edit this section -- Jessica \& Michelle]
 }
 
 {\raggedright
@@ -151,15 +117,47 @@
 }
 
 {\raggedright
-[Edit bhis section -- Thatang]
+[Edit this section -- Thabang]
 }
 
 {\raggedright
-[Edit ohis section -- Prentlan]
+[Edit this section -- Prenolan]
 }
 
 {\raggedright
-[Edis this tection -- Lutfiyya]
+[Edit this section -- Lutfiyya]
+}
+
+{\raggedright
+[Edit this section -- Maria]
+}
+
+{\raggedright
+\subsection{Process specifications}
+}
+
+{\raggedright
+[Edit this section -- Jessica \& Michelle]
+}
+
+{\raggedright
+[Edit this section -- Jimmy]
+}
+
+{\raggedright
+[Edit this section -- Ephi]
+}
+
+{\raggedright
+[Edit this section -- Thabang]
+}
+
+{\raggedright
+[Edit this section -- Prenolan]
+}
+
+{\raggedright
+[Edis this section -- Lutfiyya]
 }
 
 {\raggedright
