Added report evaluation

--- a/FR.tex
+++ b/FR.tex
@@ -1,5 +1,7 @@
 \documentclass[a4paper,11pt]{article}
 \usepackage{graphicx}
+\usepackage{hyperref}
+
 \begin{document}
 \begin{center}
 
@@ -22,7 +24,7 @@ Maria Qumalo&29461775\\
 
 \vspace{1cm}
 \textbf{Git repository link:\\}
-www.github.com/u12230830/COS301\_6b
+\url{https://github.com/u12230830/COS301\_6b}
 
 \vspace{1cm}
 \textbf{Date:} 27 February 2015
@@ -32,11 +34,11 @@ www.github.com/u12230830/COS301\_6b
 
 
 \newpage
+
+%Section Functional requirements
 \begin{center}
 \section{Functional Requirements}
 \end{center}
-%Section Functional requirements
-
 
 \subsection{Use case prioritization}
 Jessica and Michelle\\
@@ -51,6 +53,9 @@ Prenolan\\
 \\
 \\
 Lutfiyya\\
+\textbf{Important}: Evaluation Report
+\\
+\\
 Maria\\
 
 
@@ -80,6 +85,13 @@ Prenolan
 \\
 \\
 Lutfiyya\\
+\subsubsection{Evaluation Report}
+\textbf{Pre-Condition}: A lecturer has to be a registered user of a Buzz Space and must also be logged in to be able to generate an evaluation report of the students. The UserID of a participant should exist for reporting purposes.
+\\
+\textbf{Post-Condition:} A lecturer should get statistical information about each student and generate an evaluation report for a participant
+\\
+\\
+
 Maria\\
 
 \subsection{Required functionality}
@@ -95,7 +107,11 @@ Prenolan\\
 \begin{center}
 \includegraphics[width=0.9\linewidth]{./Images/BestAnswer/functional_requirements}
 \end{center}
+
 Lutfiyya\\
+\includegraphics[width=15cm,height=10cm]{./Images/Report/functional_requirements}\\
+\\
+
 Maria\\
 
 \subsection{Process specification}
@@ -111,7 +127,14 @@ Prenolan\\
 \begin{center}
 \includegraphics[width=0.9\linewidth]{./Images/BestAnswer/process_spec}
 \end{center}
+
 Lutfiyya\\
+%\begin{figure}
+%\centering
+\includegraphics[width=15cm,height=10cm]{./Images/Report/process_spec}
+%\caption{Process specification for evaluation of reports}
+%\end{figure}
+
 Maria\\
 
 \subsection{Domain model}
