--- a/FR.tex
+++ b/FR.tex
@@ -44,6 +44,7 @@ Maria Qumalo&29461775\\
 Jessica and Michelle\\
 Jimmy\\
 Ephi\\
+\textbf{Critical}: Management of user profiles.
 Thabang\\
 \\
 Prenolan\\
@@ -63,6 +64,10 @@ Maria\\
 Jessica and Michelle\\
 Jimmy\\
 Ephi\\
+\subsection{Managing User Profile}
+\textbf{Pre-Condition}: A user must be a registered member of the university and a registered member of one or more modules available on the BuzzSpace.
+\\
+\textbf{Post-Condition}: The user is registed and can now login thus it is now possible for the user to comment, tag and vote for threads on the BuzzSpace. The user now has a profile on the BuzzSpce meaning the can have a status, thus enabling diffent functionality at different status levels.
 Thabang\\
 \\
 Prenolan
