added IO class diagram

--- a/FR.tex
+++ b/FR.tex
@@ -96,7 +96,9 @@ Lutfiyya\\
 \textbf{Post-Condition:} A lecturer should get statistical information about each student and generate an evaluation report for a participant
 \\
 \\
-
+\includegraphics{Images/Report/Input&Output}
+\\
+\\
 Maria\\
 
 \subsection{Required functionality}
