--- a/FR.tex
+++ b/FR.tex
@@ -68,6 +68,11 @@ Ephi\\
 \textbf{Pre-Condition}: A user must be a registered member of the university and a registered member of one or more modules available on the BuzzSpace.
 \\
 \textbf{Post-Condition}: The user is registed and can now login thus it is now possible for the user to comment, tag and vote for threads on the BuzzSpace. The user now has a profile on the BuzzSpce meaning the can have a status, thus enabling diffent functionality at different status levels.
+\\
+\\
+\includegraphics{Images/ManageUserProfile/Class_Diagram_Input}
+\includegraphics{Images/ManageUserProfile/Class_Diagram_Output}
+\\
 Thabang\\
 \\
 Prenolan
@@ -105,6 +110,9 @@ Maria\\
 Jessica and Michelle\\
 Jimmy\\
 Ephi\\
+\begin{center}
+\includegraphics[width=0.9\linewidth]{./Images/ManageUserProfile/functional_requirements}
+\end{center}
 Thabang\\
 Prenolan\\
 \begin{center}
@@ -125,6 +133,11 @@ Maria\\
 Jessica and Michelle\\
 Jimmy\\
 Ephi\\
+
+\begin{center}
+\includegraphics[width=0.9\linewidth]{./Images/ManageUserProfile/functional_requirements}
+\end{center}
+
 Thabang\\
 Prenolan\\
 \begin{center}
