Changes of title of PDF

--- a/FR.tex
+++ b/FR.tex
@@ -5,10 +5,11 @@
 \begin{document}
 \begin{center}
 
-\LARGE\textbf{Functional Requirements\\}
+\Huge\textbf{Functional Requirements\\}
 																											
 \vspace{2 cm}
-\textbf{Group Name:} Group 6\_b\newline
+
+\LARGE\textbf{Group Name:} Group 6\_b\newline
  
 \vspace{0.5 cm}
 \begin{tabular}{lr}
@@ -37,7 +38,7 @@ Maria Qumalo&29461775\\
 
 %Section Functional requirements
 \begin{center}
-\section{Functional Requirements}
+\huge\section{Functional Requirements}
 \end{center}
 
 \subsection{Use case prioritization}
@@ -64,7 +65,7 @@ Maria\\
 Jessica and Michelle\\
 Jimmy\\
 Ephi\\
-\subsection{Managing User Profile}
+\subsubsection{Managing User Profile}
 \textbf{Pre-Condition}: A user must be a registered member of the university and a registered member of one or more modules available on the BuzzSpace.
 \\
 \textbf{Post-Condition}: The user is registed and can now login thus it is now possible for the user to comment, tag and vote for threads on the BuzzSpace. The user now has a profile on the BuzzSpce meaning the can have a status, thus enabling diffent functionality at different status levels.
