--- a/FR.tex
+++ b/FR.tex
@@ -44,6 +44,13 @@ Maria Qumalo&29461775\\
 \subsection{Use case prioritization}
 Jessica and Michelle\\
 Jimmy\\
+\textbf{Critical}: Closing threads is very essential in maintaining order within the system. If a final answer to any query has been reached then there should be no further discussion regarding it. Alternatively, a request can be sent to the administrator to reopen the thread should there be any further developments with regard to the given problem.
+\textbf{Critical}: The Hiding of Threads is also very essential to the integrity of the system. This allows the administrator to use their own discretion with regard to the given thread. If the content of the thread is misleading, vulgar, plagiarized etc. it is up to the administrator to see to it that the thread is blocked or hidden from other users to avoid any conflict.
+\\
+\textbf{Important}: The moving of content within the system is very important. It may occur that a similar issue has been raised in another thread or Buzz space. To avoid duplication of discussions, it is necessary do duplicate the solution. Another case exists where a post is not relevant to an active discussion but is very valuable to another. The administrator should therefore be able to actively move that content to a relevant Buzz space/thread.
+\\
+\textbf{Nict-To-Have}: It is preferable to summarize a thread i.e. to show only the root and the final answer and the social tags when entering a Buzz space. This makes for a finer design which is more organized and relieves the user of the trouble to rummage through tedious comment. Such a scenario would exist when the amount of content is hefty or when a discussion is lengthy. However, the system will not lose any significant value is this feature is omitted. In many systems, users have the option to expand or collapse threads.
+\\
 Ephi\\
 \textbf{Critical}: Management of user profiles.
 Thabang\\
@@ -64,6 +71,34 @@ Maria\\
 \subsection{Use case/ Services contracts}
 Jessica and Michelle\\
 Jimmy\\
+\subsection{Summarizing threads}
+\textbf{Pre-Condition}: The thread has exist.
+\textbf{Pre-Condition}: The thread has to be closed. A conclusion was reached.
+\\
+\textbf{Post-Condition}: Only the root thread, social tags and the solution thread should be visible to the user. A link to the fully expanded thread and children should be available.
+\textbf{Post-Condition}: The thread must still exist.
+\\
+\subsection{Hiding Threads}
+\textbf{Pre-Condition}: The thread must exist.
+\textbf{Pre-Contition}: The thread’s integrity has to questionable.
+\\
+\textbf{Post-Condition}: The thread must still exist.
+\textbf{Post-Condition}: The thread must be hidden from the end users but visible to the system.
+\\
+\subsection{Closing threads}
+\textbf{Pre-Condition}: The thread must exist.
+\textbf{Pre-Contition}: A conclusion has to have been agreed upon.
+\\
+\textbf{Post-Condition}: The thread must still exist.
+\textbf{Post-Condition}: No further sub-threads may be created. 
+\textbf{Post-Condition}: Thread must be available for summary.
+\\
+\subsection{Moving Threads}
+\textbf{Pre-Condition}: The thread must exist.
+\textbf{Pre-Contition}: The destination has to relevant to the thread.
+\\
+\textbf{Post-Condition}: The thread must still exist.
+\textbf{Post-Condition}: The thread may or may not exist depending on the relevance to the space.
 Ephi\\
 \subsubsection{Managing User Profile}
 \textbf{Pre-Condition}: A user must be a registered member of the university and a registered member of one or more modules available on the BuzzSpace.
