Fixed a few of my LaTeX errors

--- a/FR.tex
+++ b/FR.tex
@@ -44,12 +44,12 @@ Maria Qumalo&29461775\\
 \subsection{Use case prioritization}
 Jessica and Michelle\\
 Jimmy\\
-\textbf{Critical}: Closing threads is very essential in maintaining order within the system. If a final answer to any query has been reached then there should be no further discussion regarding it. Alternatively, a request can be sent to the administrator to reopen the thread should there be any further developments with regard to the given problem.
+\textbf{Critical}: Closing threads is very essential in maintaining order within the system. If a final answer to any query has been reached then there should be no further discussion regarding it. Alternatively, a request can be sent to the administrator to reopen the thread should there be any further developments with regard to the given problem.\\
 \textbf{Critical}: The Hiding of Threads is also very essential to the integrity of the system. This allows the administrator to use their own discretion with regard to the given thread. If the content of the thread is misleading, vulgar, plagiarized etc. it is up to the administrator to see to it that the thread is blocked or hidden from other users to avoid any conflict.
 \\
 \textbf{Important}: The moving of content within the system is very important. It may occur that a similar issue has been raised in another thread or Buzz space. To avoid duplication of discussions, it is necessary do duplicate the solution. Another case exists where a post is not relevant to an active discussion but is very valuable to another. The administrator should therefore be able to actively move that content to a relevant Buzz space/thread.
 \\
-\textbf{Nict-To-Have}: It is preferable to summarize a thread i.e. to show only the root and the final answer and the social tags when entering a Buzz space. This makes for a finer design which is more organized and relieves the user of the trouble to rummage through tedious comment. Such a scenario would exist when the amount of content is hefty or when a discussion is lengthy. However, the system will not lose any significant value is this feature is omitted. In many systems, users have the option to expand or collapse threads.
+\textbf{Nict-To-Have}: It is preferable to summarize a thread i.e. to show only the root and the final answer and the social tags when entering a Buzz space. This makes for a finer design which is more organized and relieves the user of the trouble to rummage through tedious comment. Such a scenario would exist when the amount of content is hefty or when a discussion is lengthy. However, the system will not lose any significant value is this feature is omitted. In many systems, users have the option to expand or collapse threads.\\
 \\
 Ephi\\
 \textbf{Critical}: Management of user profiles.
@@ -106,8 +106,8 @@ Ephi\\
 \textbf{Post-Condition}: The user is registed and can now login thus it is now possible for the user to comment, tag and vote for threads on the BuzzSpace. The user now has a profile on the BuzzSpce meaning the can have a status, thus enabling diffent functionality at different status levels.
 \\
 \\
-\includegraphics{Images/ManageUserProfile/Class_Diagram_Input}
-\includegraphics{Images/ManageUserProfile/Class_Diagram_Output}
+%\includegraphics{Images/ManageUserProfile/Class_Diagram_Inputs}
+\includegraphics{Images/ManageUserProfile/Class_Diagram_Outputs}
 \\
 Thabang\\
 \\
@@ -118,7 +118,7 @@ Prenolan
 \textbf{Post-Condition:} A vote or evaluation has to be visible to every user (or only some based on the administration of that space) after it has been made on a post. A positive vote or evaluation has to reflect upon the posters progress to the next status level.
 \\
 \\
-\includegraphics{Images/VotesAndEvaluation/Class_Diagram__Input}
+%\includegraphics{Images/VotesAndEvaluation/Class_Diagram__Input}
 \includegraphics{Images/VotesAndEvaluation/Class_Diagram__Output}
 \\
 \subsubsection{Best Answer}
