--- a/FR.tex
+++ b/FR.tex
@@ -43,9 +43,16 @@ Maria Qumalo&29461775\\
 
 \subsection{Use case prioritization}
 Jessica and Michelle\\
+\textbf{Critical}: CRUD Posts.\\
+\textbf{Critical}: CRUD BuzzSpace.\\
+\textbf{Critical}: Login.
+\\
+\\
 Jimmy\\
 Ephi\\
 \textbf{Critical}: Management of user profiles.
+\\
+\\
 Thabang\\
 \\
 Prenolan\\
@@ -63,7 +70,44 @@ Maria\\
 
 \subsection{Use case/ Services contracts}
 Jessica and Michelle\\
+\subsubsection{CRUD BuzzSpace}
+\textbf{Pre-Condition:} User who want to create the BuzzSpace must be registered (if for a specific module, user must be registered for that module too) and logged in.
+User must have the necessary permissions to create, update and delete a BuzzSpace.
+No BuzzSpace with the same name may be created.
+\\
+\textbf{Post-Condition:} BuzzSpace will be archived for future reference.
+\\
+\textbf{Request and Results Data Structure:}
+\\
+\\
+\subsubsection{CRUD Posts}
+\textbf{Pre-Condition:} The user must be registered to the BuzzSpace to which he/she wants to CRUD a post.
+The user must be logged in (except with read – will use “Guest user”).
+To update and delete other users’ posts, the user should have certain permissions before it can be done.
+User must adhere to length restriction on a certain level.
+User must have a high enough status to post on a certain level.
+\\
+\textbf{Post-Condition:}If a post is read, it will be displayed as a read post.
+If a post is updated, everyone who has read that certain post before, will be notified, and also the creator of the thread (even if he has not read it).
+If a post is deleted, the creator of the thread will be notified.
+After posting the user’s status should be changed according to the post.
+If plagiarism is detected, notify the creator of the thread and BuzzSpace so that they can decide what to do (delete or update that post).
+\\
+\textbf{Request and Results Data Structure:}
+\\
+\\
+
+\subsubsection{Login}
+\textbf{Pre-Condition:} User must be registered.
+\\
+\textbf{Post-Condition:} User is now able to create, update and delete posts(his/her own) and have access to other functionality features.
+\\
+\textbf{Request and Results Data Structure:}
+\\
+\\
+
 Jimmy\\
+
 Ephi\\
 \subsubsection{Managing User Profile}
 \textbf{Pre-Condition}: A user must be a registered member of the university and a registered member of one or more modules available on the BuzzSpace.
@@ -71,11 +115,13 @@ Ephi\\
 \textbf{Post-Condition}: The user is registed and can now login thus it is now possible for the user to comment, tag and vote for threads on the BuzzSpace. The user now has a profile on the BuzzSpce meaning the can have a status, thus enabling diffent functionality at different status levels.
 \\
 \\
-\includegraphics{Images/ManageUserProfile/Class_Diagram_Input}
-\includegraphics{Images/ManageUserProfile/Class_Diagram_Output}
+\includegraphics{Images/ManageUserProfile/Class_Diagram_Inputs}
+\includegraphics{Images/ManageUserProfile/Class_Diagram_Outputs}
 \\
+
 Thabang\\
 \\
+
 Prenolan
 \subsubsection{Voting and Evaluation}
 \textbf{Pre-Condition}: A post has to have been created for a user to be able to vote on or evaluate it. Any user can vote on or evaluate a post as long as the user is logged in and a part of a specific Buzz Space. An exception to this rule is when the administration of a Buzz Space set specific rules as to which users (perhaps based on status) can vote on or evaluate posts.
