--- a/Func Req.tex
+++ b/Func Req.tex
@@ -291,6 +291,7 @@ Maria Qumalo&29461775\\
 %MARIA
 \section{Post Tagging}
 \subsection*{Description:}
+\textbf{Description:}One very important functional requierment is the ability for the user to structure the information and content comming in according to his own preferance and needs. Socilal tagging will enable him to do so.
 \subsection{Prioritization:} 
 \subsection{Conditions and Data Structures:}
 \subsubsection*{Pre-Conditions:}
